# qualy

./: .gitignore  .lintstagedrc.js  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  install.sh  oxlint.deep.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: post-edit.sh
.github/workflows/: publish.yml
.harn/docs/cli-bin-resolution/: PLAN.md  SPEC.md  TASKS.md
.harn/docs/fixes/: TASKS-quality-metrics.md
.harn/docs/lint-ignore/: PLAN.md  SPEC.md  TASKS.md
.harn/docs/mvp/: IMPLEMENTATION_PLAN.md  PLAN.md  (+1 more)
agents/: lint-auditor.md  lint-detector.md  lint-installer.md  lint-migrator.md
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
cli/tests/fixtures/unsupported-python/: EXPECTED.json  EXPECTED.md  pyproject.toml
cli/tests/fixtures/unsupported-python/src/unsupported_python/: __init__.py  main.py  utils.py
commands/lint/: audit.md  report.md  rollback.md  setup.md  uninstall.md  update.md
docs/: audit-format.md  compatibility.md  coverage.md  recs-heuristics.md  report-design.md  stages.md  thresholds.md
docs/adrs/: 0001-oxc-only-v1.md  0002-named-backup-rollback.md  0003-stage-detection-heuristic.md  0004-audit-update-coupling.md  0005-report-ephemeral-server-with-export.md  0006-deterministic-cli-thin-harness.md  0007-runtime-ts-strip-types.md  0008-hybrid-recs-rationale.md  0009-install-script-distribution.md  0010-npm-distribution.md  0011-tsx-runtime.md  0012-oxlint-jsplugin-resolution.md  0013-scope-resolution-probe.md
skills/lint/: SKILL.md  cli
(+278 files in other folders)
